--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+# Source: https://jeffrafter.com/unity-and-github/
+#
 # This .gitignore file should be placed at the root of your Unity project directory
 #
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
