--- a/.gitignore
+++ b/.gitignore
@@ -60,3 +60,5 @@ sysinfo.txt
 # Crashlytics generated file
 crashlytics-build.properties
 
+Project Labyrinth/UserSettings/Layouts/default-2021.dwlt
+Project Labyrinth/UserSettings/EditorUserSettings.asset
